of JSR-223 script interface instead of the Bean Scripting Framework. 
The list of available script engines should properly reflect the 
engines installed on OmegaT classpath. Since Java6 includes by 
default a javascript engine, we don't need Rhino anymore.
The value returned by the executed script is displayed in the script 
console.

  - Upgraded Groovy version from 1.8.9 to 2.2.2

  - Addition of two new scripts to deal with extra tags. 
replace_with_match_no_tags.groovy will replace the target segment with a match 
without the tags.
replace_strip_tags.groovy will remove any tag form the target segment.
Other related scripts are available from 
http://libretraduko.wordpress.com/2013/06/26/stripping-tags-everywhere-groovy-way/

  - When reading a level-2 project_save.tmx, standalone tags (e.g., <f0>) will have
a trailing '/' or not depending on the option in Options > External TMXs. Previously, a
trailing / was never added. This will improve compatibility when translating XML content and 
when project_save was not produced by OmegaT.

  - XLIFF filter option: Ignore type and ctype attributes when building <bpt> and 
<ept> tag shortcuts. This is similar to the option already available for <ph> tags:
https://sourceforge.net/p/omegat/feature-requests/938/


  Bug fixes:

  - Monolingual .po: msgstr in exported files are empty 
  https://sourceforge.net/p/omegat/bugs/654/

  - Error on saving team project without glossary file 
  https://sourceforge.net/p/omegat/bugs/657/

  - Problem using Filter in search window when no matches are returned 
  https://sourceforge.net/p/omegat/bugs/653/

  - XLIFF filter: untranslatable text (translate="no") appeared in the Editor

  - When inserting a missing tag pair, any selected text was deleted

  - On Mac, the quit and About menu behaviour was fixed

  - Scripting window layout leaves "RUN" button out 
  https://sourceforge.net/p/omegat/bugs/646/

  Localisation updates:
